compiler/testData/diagnostics/tests/sealed/NeverInterface.kt
<!TRAIT_CAN_NOT_BE_SEALED!>sealed<!> interface Base {

}
